--- a/config/config.json
+++ b/config/config.json
@@ -14,10 +14,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "QuizChampBE-prod",
-    "host": "127.0.0.1",
+    "username": "mysql",
+    "password": "8d1nyvXVeO1AELru1ZkNOhygMxhbdGN5",
+    "database": "mysql",
+    "host": "mysql-e98y:3306",
     "dialect": "mysql"
   }
 }
