--- a/config/config.json
+++ b/config/config.json
@@ -14,10 +14,11 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "QuizChampBE-prod",
-    "host": "quiz-champ-db:3306",
-    "dialect": "mysql"
+    "username": "mysql",
+    "password": "8d1nyvXVeO1AELru1ZkNOhygMxhbdGN5",
+    "database": "mysql",
+    "host": "quiz-champ-db",
+    "dialect": "mysql",
+    "port": "3306"
   }
 }
