--- a/config/config.json
+++ b/config/config.json
@@ -18,8 +18,7 @@
     "password": "0e8a9bfb",
     "database": "heroku_b63b228579b6fa9",
     "host": "us-cdbr-east-06.cleardb.net",
-    "dialect": "mysql",
-    "port": "3306"
+    "dialect": "mysql"
   }
 }
 
